@@ -1,3 +1,8 @@
+Thu Dec 21 14:31:04 UTC 2006  Johnny Willemsen  <jwillemsen@remedy.nl>
+
+        * ace/Sock_Connect.cpp:
+          Added support for get_interfaces for rtems
+
 Thu Dec 21 13:32:08 UTC 2006  Olli Savia  <ops@iki.fi>
 
         * include/makeinclude/platform_lynxos.GNU:
